dark mode fixes

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -217,7 +217,7 @@ a.sidebar-nav-item:focus {
   align-items: center;
   padding: 0.25rem 0.75rem;
   color: #505050;
-  background-color: #fff;
+  background-color: hsl(0, 0%, 60%);
   border-radius: 0.25rem;
   cursor: pointer;
 }
@@ -234,7 +234,7 @@ a.sidebar-nav-item:focus {
 .sidebar-toggle:active,
 #sidebar-checkbox:focus ~ .sidebar-toggle,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
-  color: #fff;
+  color: hsl(0, 0%, 60%);
   background-color: #555;
 }
 
@@ -311,7 +311,7 @@ a.sidebar-nav-item:focus {
 .page-title,
 .post-title,
 .post-title a {
-  color: #303030;
+  color: hsl(0, 0%, 60%);
 }
 .page-title,
 .post-title {
