--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -176,7 +176,7 @@ pre {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f9f9f9;
+  background-color: hsl(0, 0%, 60%);
 }
 pre code {
   padding: 0;
